--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.8",
-        "@vitejs/plugin-vue": "^5.2.3"
+        "@meforma/vue-toaster": "^1.3.0",
+        "@vitejs/plugin-vue": "^5.2.3",
+        "vue3-easy-data-table": "^1.5.47"
     }
 }
